feat(core): encrypt file paths and names, not just content
manifest.json stored every entry's real path in plain JSON, and each
encrypted file under documents/ was literally named <real-path>.enc,
mirroring the real directory structure - so anyone with read access to
the remote repository could see every filename and folder name without
decrypting anything, which itself often leaks sensitive information.

manifest.json is now encrypted as a whole (new EncryptedManifestFileAdapter,
decorating JsonManifestFileAdapter with the same hybrid X25519+AES-GCM
envelope already used for file content), and documents/ filenames became
random per-file ids instead of real paths (never derived from the path
itself, to prevent offline dictionary attacks on candidate filenames).
Bumped the .enc envelope RV01 -> RV02, dropping the plaintext
originalFileName header field the old format leaked outside the sealed
content. ManifestEntry.hash moved from plain SHA-256 to HMAC-SHA256 keyed
by a random per-vault secret stored inside the (now encrypted) manifest,
closing a related, already-tracked issue (offline confirmation of known
file content from the previously plaintext hash).

Found and fixed along the way: AuthorizeMachineService/RevokeMachineService
only ever re-encrypted file content for the updated recipient set, never
the manifest itself - a revoked machine would otherwise keep the ability
to decrypt (and thus read every real path from) the last manifest version
it had access to. CloneVaultService now tolerates a freshly cloned,
not-yet-authorized machine failing to decrypt the manifest instead of
crashing.

Adds MigrateVaultFormatService (+ports) to convert an existing pre-RV02
vault in place: nothing old is deleted or published until every entry has
re-encrypted successfully, so a failure partway through leaves the vault
exactly as readable as before.